Refactory adv queries. Family adv search changed. Swaggerdoc updated.
